<resources>
    <string name="app_name">Mood</string>
    <string name="icon">ICON</string>
    <string name="songtitle">SongTitle</string>
    <string name="_00_00">00:00</string>
    <string name="previousbutton">previousButton</string>
    <string name="pausebutton">pauseButton</string>
    <string name="playbutton">playButton</string>
    <string name="nextbutton">nextButton</string>
    <string name="repeatbutton">repeatButton</string>
    <string name="shufflebutton">shuffleButton</string>
    <string name="logo">Logo</string>
</resources>